--- a/Java/Java_Client/src/pkgGui/Main.fxml
+++ b/Java/Java_Client/src/pkgGui/Main.fxml
@@ -73,9 +73,26 @@
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
                   <ListView fx:id="lstRehearsalRequests" prefHeight="367.0" prefWidth="217.0" />
-                  <VBox prefHeight="367.0" prefWidth="392.0">
+                  <VBox prefHeight="150.0" prefWidth="388.0">
                      <children>
-                        <WebView fx:id="wviewCalendar" prefHeight="367" prefWidth="99.0" />
+                        <WebView fx:id="wviewCalendar" prefHeight="267.0" prefWidth="386.0" />
+                        <GridPane>
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <Label text="From:" />
+                              <Label text="To:" GridPane.rowIndex="1" />
+                              <TextField fx:id="txtFrom" GridPane.columnIndex="1" />
+                              <TextField fx:id="txtTo" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                           </children>
+                        </GridPane>
+                        <Button fx:id="btnSavePossibleTimes" mnemonicParsing="false" onAction="#btnSavePossibleTimes_onAction" text="Save Possible Times" />
                      </children>
                   </VBox>
                </children>
